@@ -442,7 +442,7 @@ body.dark-theme{
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-body.dark-theme .collapse{
+body.dark-theme nav .collapse{
     background-color:#333131 !important;
 }
 
